[gd_scene load_steps=22 format=2]

[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/return_to_player.gd" type="Script" id=2]
[ext_resource path="res://pieceBlack_border00.png" type="Texture" id=3]
[ext_resource path="res://pieceBlue_border01.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=18]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=19]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=20]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=21]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=22]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=23]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 24
font_data = ExtResource( 1 )

[node name="NewGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="VBoxContainer" parent="."]
visible = false
margin_left = 186.0
margin_top = 211.0
margin_right = 1100.0
margin_bottom = 527.0
custom_constants/separation = 42
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1_Icon" type="VBoxContainer" parent="Player1"]
margin_right = 914.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player1/Player1_Icon"]
margin_right = 914.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 13 )
text = "Player 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1_Button" type="Button" parent="Player1/Player1_Icon"]
margin_left = 419.0
margin_top = 42.0
margin_right = 495.0
margin_bottom = 112.0
size_flags_horizontal = 4
icon = ExtResource( 4 )
flat = true

[node name="Disease" type="HBoxContainer" parent="Player1"]
margin_top = 154.0
margin_right = 914.0
margin_bottom = 199.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Player1/Disease"]
margin_right = 160.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "Disease:"

[node name="DiseaseForm" type="TextEdit" parent="Player1/Disease"]
margin_left = 180.0
margin_right = 914.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="DrugName" type="HBoxContainer" parent="Player1"]
margin_top = 154.0
margin_right = 914.0
margin_bottom = 199.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Player1/DrugName"]
margin_right = 229.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
text = "Drug Name:"

[node name="DrugNameForm" type="TextEdit" parent="Player1/DrugName"]
margin_left = 249.0
margin_right = 914.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )

[node name="Player2" type="VBoxContainer" parent="."]
visible = false
margin_left = 186.0
margin_top = 170.0
margin_right = 1100.0
margin_bottom = 497.0
custom_constants/separation = 42
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2_Lineup" type="HBoxContainer" parent="Player2"]
margin_right = 914.0
margin_bottom = 153.0
custom_constants/separation = 20
alignment = 1

[node name="Player1_Icon" type="VBoxContainer" parent="Player2/Player2_Lineup"]
margin_left = 322.0
margin_right = 444.0
margin_bottom = 153.0
alignment = 1

[node name="Label" type="Label" parent="Player2/Player2_Lineup/Player1_Icon"]
margin_right = 122.0
margin_bottom = 79.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 14 )
text = "Player 1
"
align = 1

[node name="Button" type="Button" parent="Player2/Player2_Lineup/Player1_Icon"]
margin_left = 23.0
margin_top = 83.0
margin_right = 99.0
margin_bottom = 153.0
size_flags_horizontal = 4
toggle_mode = true
pressed = true
icon = ExtResource( 4 )
flat = true

[node name="Player2_Icon" type="VBoxContainer" parent="Player2/Player2_Lineup"]
margin_left = 464.0
margin_right = 592.0
margin_bottom = 153.0

[node name="Label" type="Label" parent="Player2/Player2_Lineup/Player2_Icon"]
margin_right = 128.0
margin_bottom = 79.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 15 )
text = "Player 2
"
align = 1

[node name="Button" type="Button" parent="Player2/Player2_Lineup/Player2_Icon"]
margin_left = 26.0
margin_top = 83.0
margin_right = 102.0
margin_bottom = 153.0
size_flags_horizontal = 4
toggle_mode = true
icon = ExtResource( 3 )
flat = true

[node name="Disease1" type="HBoxContainer" parent="Player2"]
margin_top = 195.0
margin_right = 914.0
margin_bottom = 240.0

[node name="Label" type="Label" parent="Player2/Disease1"]
margin_right = 160.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 16 )
text = "Disease:"

[node name="TextEdit" type="TextEdit" parent="Player2/Disease1"]
margin_left = 164.0
margin_right = 914.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )

[node name="DrugName1" type="HBoxContainer" parent="Player2"]
margin_top = 282.0
margin_right = 914.0
margin_bottom = 327.0

[node name="Label" type="Label" parent="Player2/DrugName1"]
margin_right = 229.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 18 )
text = "Drug Name:"

[node name="TextEdit" type="TextEdit" parent="Player2/DrugName1"]
margin_left = 233.0
margin_right = 914.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 19 )

[node name="Disease2" type="HBoxContainer" parent="Player2"]
visible = false
margin_top = 369.0
margin_right = 914.0
margin_bottom = 414.0

[node name="Label" type="Label" parent="Player2/Disease2"]
margin_right = 160.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 20 )
text = "Disease:"

[node name="TextEdit" type="TextEdit" parent="Player2/Disease2"]
margin_left = 164.0
margin_right = 914.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 21 )

[node name="DrugName2" type="HBoxContainer" parent="Player2"]
visible = false
margin_top = 369.0
margin_right = 914.0
margin_bottom = 414.0

[node name="Label" type="Label" parent="Player2/DrugName2"]
margin_right = 229.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 22 )
text = "Drug Name:"

[node name="TextEdit" type="TextEdit" parent="Player2/DrugName2"]
margin_left = 233.0
margin_right = 914.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 23 )

[node name="BackButton" type="Button" parent="."]
margin_left = 250.0
margin_top = 575.0
margin_right = 550.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 11 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="."]
margin_left = 700.0
margin_top = 575.0
margin_right = 1000.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 12 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Player1/Player1_Icon/Player1_Button" to="." method="_on_Player1_Button_pressed"]
[connection signal="text_changed" from="Player1/DrugName/DrugNameForm" to="." method="_on_DrugNameForm_text_changed"]
[connection signal="pressed" from="Player2/Player2_Lineup/Player1_Icon/Button" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Player2/Player2_Lineup/Player2_Icon/Button" to="." method="_on_Button2_pressed"]
[connection signal="text_changed" from="Player2/DrugName1/TextEdit" to="." method="_on_TextEdit1_text_changed"]
[connection signal="text_changed" from="Player2/DrugName2/TextEdit" to="." method="_on_TextEdit2_text_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
